[gd_scene load_steps=8 format=3 uid="uid://ct6luod1n4djp"]

[ext_resource type="Script" path="res://nodes/ui/Pause.gd" id="1_odlpr"]
[ext_resource type="Texture2D" uid="uid://dsc757k3gyfit" path="res://art/pause/frame.png" id="2_sp62r"]
[ext_resource type="Texture2D" uid="uid://icgxjh55t06n" path="res://art/pause/buttons_txt.png" id="3_ivrhu"]
[ext_resource type="Texture2D" uid="uid://pw16fbmhclva" path="res://art/pause/words.png" id="4_2ls6f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibjyx"]
size = Vector2(269, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8akwd"]
size = Vector2(271, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtod2"]
size = Vector2(272, 90)

[node name="Pause" type="Node2D"]
script = ExtResource("1_odlpr")

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(260, 283)
texture = ExtResource("2_sp62r")

[node name="Header" type="Sprite2D" parent="Frame"]
position = Vector2(0, -168)
texture = ExtResource("3_ivrhu")
region_enabled = true
region_rect = Rect2(530.828, 146.266, 235.12, 66.7106)

[node name="Resume" type="Sprite2D" parent="Frame"]
position = Vector2(0, -80)
texture = ExtResource("3_ivrhu")
region_enabled = true
region_rect = Rect2(495, 209, 292, 105)

[node name="Text" type="Sprite2D" parent="Frame/Resume"]
position = Vector2(0, 3)
texture = ExtResource("4_2ls6f")
region_enabled = true
region_rect = Rect2(0, 0, 203, 75)

[node name="Area2D" type="Area2D" parent="Frame/Resume/Text"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frame/Resume/Text/Area2D"]
position = Vector2(-3.5, 0.5)
shape = SubResource("RectangleShape2D_ibjyx")

[node name="Retry" type="Sprite2D" parent="Frame"]
position = Vector2(0, 24)
texture = ExtResource("3_ivrhu")
region_enabled = true
region_rect = Rect2(493, 325, 298, 103)

[node name="Text" type="Sprite2D" parent="Frame/Retry"]
texture = ExtResource("4_2ls6f")
region_enabled = true
region_rect = Rect2(0, 118, 203, 78)

[node name="Area2D" type="Area2D" parent="Frame/Retry/Text"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frame/Retry/Text/Area2D"]
position = Vector2(-3.5, 3.5)
shape = SubResource("RectangleShape2D_8akwd")

[node name="Menu" type="Sprite2D" parent="Frame"]
position = Vector2(0, 144)
texture = ExtResource("3_ivrhu")
region_enabled = true
region_rect = Rect2(496, 440, 294, 103)

[node name="Text" type="Sprite2D" parent="Frame/Menu"]
texture = ExtResource("4_2ls6f")
region_enabled = true
region_rect = Rect2(0, 218, 203, 97.9999)

[node name="Area2D" type="Area2D" parent="Frame/Menu/Text"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frame/Menu/Text/Area2D"]
position = Vector2(-5, 1)
shape = SubResource("RectangleShape2D_gtod2")

[connection signal="input_event" from="Frame/Resume/Text/Area2D" to="." method="_resume_event"]
[connection signal="mouse_entered" from="Frame/Resume/Text/Area2D" to="." method="_resume_enter"]
[connection signal="mouse_exited" from="Frame/Resume/Text/Area2D" to="." method="_resume_exit"]
[connection signal="input_event" from="Frame/Retry/Text/Area2D" to="." method="_retry_event"]
[connection signal="mouse_entered" from="Frame/Retry/Text/Area2D" to="." method="_retry_enter"]
[connection signal="mouse_exited" from="Frame/Retry/Text/Area2D" to="." method="_retry_exit"]
[connection signal="input_event" from="Frame/Menu/Text/Area2D" to="." method="_menu_event"]
[connection signal="mouse_entered" from="Frame/Menu/Text/Area2D" to="." method="_menu_enter"]
[connection signal="mouse_exited" from="Frame/Menu/Text/Area2D" to="." method="_menu_exit"]
